# automated-mggg-qa

./: README.md  audit.py  census.py  checks.py  description.py  flycheck_audit.py  pyproject.toml  schema.json
descriptions/: MA.json  MA10.json  MA18.json  ME.json
utils/: color.py  logger.py
